Add subject line before opening

--- a/template-letter.tex
+++ b/template-letter.tex
@@ -276,7 +276,7 @@ $endif$
 
 
 \begin{letter}{$for(address)$$address$$sep$\\$endfor$}
-\opening{$opening$}
+\opening{\textbf{Betreff: $subject$}\\[1cm]$opening$}
 
 $body$
 
